--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2634,3 +2634,68 @@ justify-content: center;
 .review-no-see{
     display: none;
 }
+
+
+  .plans-section-1-000{
+    height: 17%;
+    width: 100%;
+  }
+  .plans-section-2-100{
+    height: 78%;
+    width: 100%;
+
+  }
+  .plans-section-1-1-1{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2%;
+  }
+  .all-items-filter-1{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    /* justify-content: space-evenly; */
+    align-items: center;
+    margin-top: 1%;
+    margin-left: 2%;
+    font-family: 'Poppins';
+  }
+  .all-items-filter-1 h1{
+    height: 100%;
+    font-size: 30px;
+  }
+  .all-items-filter-1 h1 img{
+    height: 100%;
+    width: 4%;
+  }
+  .all-items-filter-1 p{
+
+  }
+
+
+  .plans-section-2-plans-plan-no-1-1{
+    height: 49%;
+    width: 22%;
+    background-color: #F5F6F7;
+    box-shadow: 6px 6px 20px rgb(122 122 122 / 21%);
+    /* border: 1px solid #dbdbdf; */
+    border-radius: 20px;
+    margin-top: 10%;
+    position: relative;
+  }
+  .plans-section-2-plans-plan-no-1-buynow-1{
+    /* border: 1px solid; */
+    height: 80%;
+    width: 22%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 16px;
+    color: white;
+    margin-left: 35%;
+    background-color: #67ef68;;
+    font-family: 'Poppins',sans-serif;
+  }
