--- a/view/paymentHistory.pug
+++ b/view/paymentHistory.pug
@@ -26,7 +26,7 @@ block content
             | Login
       .dashboard-section-div-2
         .dashboard-section-div-2-running-svg
-          img(src='./undraw_street_food_hm5i 1 (1).svg')
+          img(src='/images/undraw_street_food_hm5i 1 (1).svg')
         .dashboard-section-div-2-heading
           h1 Faster Delivery!
           h2 Learn more
@@ -46,3 +46,4 @@ block content
         .plans-section-2-plans 
          each plan in plans
           include paymentcard.pug
+block scripts
