--- a/view/paymentcard.pug
+++ b/view/paymentcard.pug
@@ -5,5 +5,5 @@
     h2 #{plan.name}
     p #{plan.address}  #{plan.bookedOn}
   .plans-section-2-plans-plan-no-1-price
-    .plans-section-2-plans-plan-no-1-pricing #{plan.currentPrice}
+    .plans-section-2-plans-plan-no-1-pricing $#{plan.currentPrice}
     .plans-section-2-plans-plan-no-1-buynow-1  ✔ 
