--- a/view/paymentHistory.pug
+++ b/view/paymentHistory.pug
@@ -4,22 +4,22 @@ block content
   .glass-container
     .dashboard-section
       .dashboard-section-div-1
-        .dashboard-section-div-1-button
+        #homeurl.dashboard-section-div-1-button
           .dashboard-section-div-1-button-icon
             i.fas.fa-archway
           .dashboard-section-div-1-button-url
             | Home
-        .dashboard-section-div-1-button
+        #reviewurl.dashboard-section-div-1-button
           .dashboard-section-div-1-button-icon
             i.fas.fa-comments
           .dashboard-section-div-1-button-url
             | review
-        .dashboard-section-div-1-button
+        #detailurl.dashboard-section-div-1-button
           .dashboard-section-div-1-button-icon
             i.fas.fa-info-circle
           .dashboard-section-div-1-button-url
             | Details
-        .dashboard-section-div-1-button
+        #loginurl.dashboard-section-div-1-button
           .dashboard-section-div-1-button-icon
             i.fas.fa-sign-in-alt
           .dashboard-section-div-1-button-url
