--- a/view/homepage.pug
+++ b/view/homepage.pug
@@ -120,6 +120,68 @@ block content
        i.fas.fa-less-than
      .lower-section-feature-plan-icons-chote
        i.fas.fa-greater-than
+ .review-showcase-section
+  .review-showcase-section-1
+    .review-showcase-section-1-1
+      h1
+        | what are  
+        br
+        span custormer Saying
+    .review-showcase-section-1-2
+      .col-sm-6(style='margin: 1%; width: 90%;')
+        .testimonial-wrap
+          .image-plus-name
+            img(src='../profilepage/pexels-wallace-chuck-4580470.jpg' alt='')
+          .testimonial
+            p(style="font-family: 'Redressed';")
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptas odit consectetur necessitatibus suscipit libero nam porro hic, cumque quos, aspernatur voluptatem laboriosam modi voluptatum nesciunt deleniti repellat error doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          cite.testimonial-author
+            span.name
+              strong(style='color: black;') Betty Crocker
+              |                           St. James, NY
+            span.stars
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+  .review-showcase-section-2
+    .review-showcase-section-2-1
+      .col-sm-6(style='margin: 1%; width: 90%;')
+        .testimonial-wrap
+          .image-plus-name
+            img(src='https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?cs=srgb&dl=pexels-pixabay-415829.jpg&fm=jpg' alt='')
+          .testimonial
+            p(style="font-family: 'Redressed';")
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptas odit consectetur necessitatibus suscipit libero nam porro hic, cumque quos, aspernatur voluptatem laboriosam modi voluptatum nesciunt deleniti repellat error doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          cite.testimonial-author
+            span.name
+              strong(style='color: black;') Betty Crocker
+              |                           St. James, NY
+            span.stars
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+    .review-showcase-section-2-1
+      .col-sm-6(style='margin: 1%; width: 90%;')
+        .testimonial-wrap
+          .image-plus-name
+            img(src='https://images.pexels.com/photos/3760924/pexels-photo-3760924.jpeg?cs=srgb&dl=pexels-sound-on-3760924.jpg&fm=jpg' alt='')
+          .testimonial
+            p(style="font-family: 'Redressed';")
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptas odit consectetur necessitatibus suscipit libero nam porro hic, cumque quos, aspernatur voluptatem laboriosam modi voluptatum nesciunt deleniti repellat error doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          cite.testimonial-author
+            span.name
+              strong(style='color: black;') Betty Crocker
+              |                           St. James, NY
+            span.stars
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
 append scripts
  script(src="https://js.stripe.com/v3/")
  script(src="js/buyplan.js")
