--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2699,3 +2699,55 @@ justify-content: center;
     background-color: #67ef68;;
     font-family: 'Poppins',sans-serif;
   }
+
+  .review-showcase-section{
+    height: 115vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.review-showcase-section-1{
+    height: 50%;
+    width: 100%;
+    display: flex;
+}
+.review-showcase-section-1-1{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.review-showcase-section-1-1 h1{
+    font-size: xxx-large;
+    font-family: 'Anton';
+    background: -webkit-linear-gradient(rgb(136, 247, 237), rgb(184, 46, 133));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+ 
+}
+.review-showcase-section-1-1 h1 span{
+    font-family: 'Redressed';
+}
+
+
+.review-showcase-section-1-2{
+    width: 50%;
+    height: 100%
+}
+.review-showcase-section-2{
+    height: 50%;
+    width: 100%;
+    display: flex;
+
+}
+
+.review-showcase-section-2-1{
+    height: 100%;
+    width: 50%;
+
+}
+.review-showcase-section-2-2{
+    height: 100%;
+    width: 50%;
+}
