--- a/view/homepage.pug
+++ b/view/homepage.pug
@@ -131,7 +131,7 @@ block content
       .col-sm-6(style='margin: 1%; width: 90%;')
         .testimonial-wrap
           .image-plus-name
-            img(src='../profilepage/pexels-wallace-chuck-4580470.jpg' alt='')
+            img(src='https://images.pexels.com/photos/846741/pexels-photo-846741.jpeg?cs=srgb&dl=pexels-andrea-piacquadio-846741.jpg&fm=jpg' alt='')
           .testimonial
             p(style="font-family: 'Redressed';")
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptas odit consectetur necessitatibus suscipit libero nam porro hic, cumque quos, aspernatur voluptatem laboriosam modi voluptatum nesciunt deleniti repellat error doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
