--- a/view/homepageheader.pug
+++ b/view/homepageheader.pug
@@ -1,7 +1,7 @@
 .header-nav-bar
   .header-nav-bar-icon
     img(src='https://img.icons8.com/pastel-glyph/64/000000/fast-food--v1.png')
-  ul.showcase-ul
+  ul.showcase-ul.aligncentre-resp.vclass-resp
     li.showcase-li
       a(href='/') FEATURES
     li.showcase-li
