--- a/view/reviewcard.pug
+++ b/view/reviewcard.pug
@@ -1,5 +1,5 @@
 -const j = `${review.rating}`
-.col-sm-6(style='margin: 1%; width: 30%;')
+.col-sm-6.mystyle
   .testimonial-wrap
     .image-plus-name
       img(src=`${review.userImage}` alt='')
