--- a/view/plancard1.pug
+++ b/view/plancard1.pug
@@ -25,7 +25,7 @@
       .lower-section-feature-plan-icons-chote
         
       .lower-section-feature-plan-icons-chote
- .plans-describe-section-with-review
+ .plans-describe-section-with-review.vclass-resp
   .plans-describe-section-with-review-1
     img(src=`${plan["planImage"]}`)
   .plans-describe-section-with-review-2
