--- a/view/plancard2.pug
+++ b/view/plancard2.pug
@@ -16,7 +16,7 @@
        .plan-describe-page-review-button(planId=`${plan["_id"]}`) Want to Rate us!
      .plan-describe-page-image
        img(src=`${plan["planImage"]}`)
- .plans-describe-section-with-review
+ .plans-describe-section-with-review.vclass-resp
   .plans-describe-section-with-review-1
     img(src=`${plan["planImage"]}`)
   .plans-describe-section-with-review-2
